--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="section section--no-padding">
+<section class="section reviews section--no-padding">
   <div class="container">
     <h2 hidden>Reviews</h2>
     <article class="article">
@@ -22,7 +22,7 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link link rotate-hor-center" href="" aria-label="github">
+                <a class="socials__link link" href="" aria-label="github">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -30,7 +30,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link rotate-hor-center" href="" aria-label="telegram">
+                <a class="socials__link link" href="" aria-label="telegram">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -38,7 +38,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link rotate-hor-center" href="" aria-label="facebook">
+                <a class="socials__link link" href="" aria-label="facebook">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -76,7 +76,7 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link rotate-hor-center link" href="" aria-label="github">
+                <a class="socials__link link" href="" aria-label="github">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -84,7 +84,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link rotate-hor-center link" href="" aria-label="telegram">
+                <a class="socials__link link" href="" aria-label="telegram">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -92,7 +92,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link rotate-hor-center link" href="" aria-label="facebook">
+                <a class="socials__link link" href="" aria-label="facebook">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -130,7 +130,7 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="github">
+                <a class="socials__link link" href="" aria-label="github">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -138,7 +138,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="telegram">
+                <a class="socials__link link" href="" aria-label="telegram">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -146,7 +146,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="facebook">
+                <a class="socials__link link" href="" aria-label="facebook">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -160,7 +160,7 @@
                   not easy, but if you want progress, stop thinking and try.
                   Everyday learning and coding give you decided result. Thanks
                   this course for start career in IT. This stage will be
-                  completed
+                  completed.
                 </p>
               </div>
             </div>
@@ -185,7 +185,7 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="github">
+                <a class="socials__link link" href="" aria-label="github">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -193,7 +193,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="telegram">
+                <a class="socials__link link" href="" aria-label="telegram">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -201,7 +201,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="facebook">
+                <a class="socials__link link" href="" aria-label="facebook">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -239,7 +239,7 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="github">
+                <a class="socials__link link" href="" aria-label="github">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -247,7 +247,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="telegram">
+                <a class="socials__link link" href="" aria-label="telegram">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -255,7 +255,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="facebook">
+                <a class="socials__link link" href="" aria-label="facebook">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -293,7 +293,7 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="github">
+                <a class="socials__link link" href="" aria-label="github">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -301,7 +301,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="telegram">
+                <a class="socials__link link" href="" aria-label="telegram">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -309,7 +309,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link  rotate-hor-center link" href="" aria-label="facebook">
+                <a class="socials__link link" href="" aria-label="facebook">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -347,7 +347,7 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link rotate-hor-center link" href="" aria-label="github">
+                <a class="socials__link link" href="" aria-label="github">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -355,7 +355,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link rotate-hor-center link" href="" aria-label="telegram">
+                <a class="socials__link link" href="" aria-label="telegram">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -363,7 +363,7 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link rotate-hor-center link" href="" aria-label="facebook">
+                <a class="socials__link link" href="" aria-label="facebook">
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -384,6 +384,56 @@
 
             <div class="swiper-slide__subtitle">
               <p>Oleh Tulaidan, Ivano-Frankivsk</p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="thumb">
+              <img
+                class="thumb__avatar"
+                srcset="
+                  ./images/customer-reviews/reviews/photo-viktor.jpg    1x,
+                  ./images/customer-reviews/reviews/photo-viktor-2x.jpg 2x
+                "
+                src="./images/customer-reviews/reviews/photo-viktor.jpg"
+                alt="Viktor Annyenkov"
+                width="150"
+                height="150"
+              />
+            </div>
+            <ul class="socials">
+              <li class="socials__item">
+                <a class="socials__link link" href="" aria-label="github">
+                  <svg class="icon page-footer__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-footer-github"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="socials__item">
+                <a class="socials__link link" href="" aria-label="telegram">
+                  <svg class="icon page-footer__icon" width="20" height="20">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="socials__item">
+                <a class="socials__link link" href="" aria-label="facebook">
+                  <svg class="icon page-footer__icon" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <div class="swiper-slide__content">
+              <div class="swiper-slide__thumb">
+                <p class="swiper-slide__text">
+                 Working in a team project, I am glad to meet interesting people and learn from their experience and knowledge. For myself, I acquired emphasized new methods for solving problems. Thanks to everyone for the excellent work and project.</p>
+              </div>
+            </div>
+
+            <div class="swiper-slide__subtitle">
+              <p>Viktor Annyenkov, Kyiv</p>
             </div>
           </div>
         </div>
