--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,7 @@
 <section class="section contacts">
   <div class="container">
     <h2 class="contacts__title">contacts</h2>
-  <!--контакты представительств-->
+    <!--контакты представительств-->
     <ul class="contacts__list">
       <li class="contacts__branch">
         <ul class="branch">
@@ -29,29 +29,29 @@
         </ul>
       </li>
       <li class="contacts__branch">
-      <ul class="branch">
-        <li>
-          <p class="branch__type branch__type--color">foodtruck</p>
-        </li>
-        <li class="branch__content">
-          <p class="branch__location">Los Angeles</p>
-          <p class="branch__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        </li>
-        <li class="branch__content">
-          <div class="branch__weekdays">
-            <p class="branch__days">Monday - Friday</p>
-            <p class="branch__time">06:00 AM - 10:00 PM</p>
-          </div>
-          <div class="branch__weekends">
-            <p class="branch__days">Saturday - Sunday</p>
-            <p class="branch__time">08:00 AM - 16:00 PM</p>
-          </div>
-        </li>
-        <li class="branch__content">
-          <a class="link" href="tel:+610383766284">+61 (0) 383 766 284</a>
-          <a class="link" href="mailto:noreply@envato.com">noreply@envato.com</a>
-        </li>
-      </ul>
+        <ul class="branch">
+          <li>
+            <p class="branch__type branch__type--color">foodtruck</p>
+          </li>
+          <li class="branch__content">
+            <p class="branch__location">Los Angeles</p>
+            <p class="branch__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+          </li>
+          <li class="branch__content">
+            <div class="branch__weekdays">
+              <p class="branch__days">Monday - Friday</p>
+              <p class="branch__time">06:00 AM - 10:00 PM</p>
+            </div>
+            <div class="branch__weekends">
+              <p class="branch__days">Saturday - Sunday</p>
+              <p class="branch__time">08:00 AM - 16:00 PM</p>
+            </div>
+          </li>
+          <li class="branch__content">
+            <a class="link" href="tel:+610383766284">+61 (0) 383 766 284</a>
+            <a class="link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          </li>
+        </ul>
       </li>
       <li class="contacts__branch">
         <ul class="branch">
@@ -79,10 +79,10 @@
         </ul>
       </li>
     </ul>
-  <!--кнопки для локации отделений-->
+    <!--кнопки для локации отделений-->
     <ul class="contacts__btn-list">
       <li class="contacts__btn">
-        <button class="button button--with-hover">
+        <button locations-modal-open class="button button--with-hover">
           <span class="contacts__btn-text">Our Locations</span>
           <svg class="contacts__icon" width="8" height="10">
             <use href="./images/icons.svg#icon-header-arrow-btn"></use>
@@ -90,7 +90,7 @@
         </button>
       </li>
       <li class="contacts__btn">
-        <button class="button button--with-hover">
+        <button franchise-modal-open class="button button--with-hover">
           <span class="contacts__btn-text">Franchise</span>
           <svg class="contacts__icon" width="8" height="10">
             <use href="./images/icons.svg#icon-header-arrow-btn"></use>
