--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -1,12 +1,10 @@
 <!-- Header / Buy Now Modal -->
 
-<!-- data-modal -->
-
 <div class="mob-menu__modal--backdrop mob-menu__modal--is-hidden" data-modal>
     <div class="modal-default-container">
         <button data-modal-close class="mob-menu__modal--close-btn">
             <svg class="contact__locations-modal--close-icon">
-                <use href="./images/modal-icons.svg#products-close-button"></use>
+                <use href="./images/icons.svg#products-close-button"></use>
             </svg>
         </button>
         <h2 class="mob-menu__modal--heading">Choose what you like</h2>
@@ -15,7 +13,7 @@
                 <h3>Ice Coffee</h3>
                 <img src="./images/gallery/tablet/gall-nine-koffee-tab-x1.png" alt="">
                 <svg class="mob-menu__modal-card-icon">
-                    <use href="./images/modal-icons.svg#modal-like"></use>
+                    <use href="./images/icons.svg#modal-like"></use>
                 </svg>
                 <div class="mob-menu__modal--stepper">
                     <span class="stepper">
@@ -29,7 +27,7 @@
                 <h3>Icecream1</h3>
                 <img src="./images/gallery/tablet/gall-seven-icehand-tab-x1.png" alt="">
                 <svg class="mob-menu__modal-card-icon">
-                    <use href="./images/modal-icons.svg#modal-like"></use>
+                    <use href="./images/icons.svg#modal-like"></use>
                 </svg>
                 <div class="mob-menu__modal--stepper">
                     <span class="stepper">
@@ -43,7 +41,7 @@
                 <h3>Icecream2</h3>
                 <img src="./images/gallery/tablet/gall-three-icelolly-tab-x1.png" alt="">
                 <svg class="mob-menu__modal-card-icon">
-                    <use href="./images/modal-icons.svg#modal-like"></use>
+                    <use href="./images/icons.svg#modal-like"></use>
                 </svg>
                 <div class="mob-menu__modal--stepper">
                     <span class="stepper">
@@ -57,7 +55,7 @@
                 <h3>Icecream3</h3>
                 <img src="./images/gallery/tablet/gall-two-ice-tab-x1.png" alt="">
                 <svg class="mob-menu__modal-card-icon">
-                    <use href="./images/modal-icons.svg#modal-like"></use>
+                    <use href="./images/icons.svg#modal-like"></use>
                 </svg>
                 <div class="mob-menu__modal--stepper">
                     <span class="stepper">
@@ -79,13 +77,11 @@
 
 <!-- About / Read More Modal  -->
 
-<!-- about-modal-open  -->
-
 <div class="about__readmore-modal--backdrop about__readmore-modal--is-hidden" about-modal>
     <div class="modal-default-container about__readmore-modal">
         <button about-modal-close class="about__readmore-modal--close-btn">
             <svg class="contact__locations-modal--close-icon">
-                <use href="./images/modal-icons.svg#products-close-button"></use>
+                <use href="./images/icons.svg#products-close-button"></use>
             </svg>
         </button>
         <h2 class="about__readmore-modal--heading"></h2>
@@ -157,20 +153,16 @@
                 Australia New Zealand Food Standards Code.
             </p>
         </div>
-
     </div>
 </div>
 
 <!-- Contacts / Locations Modal  -->
 
-<!-- locations-modal-open  -->
-
-
 <div class="contact__locations-modal--backdrop contact__locations-modal--is-hidden" locations-modal>
     <div class="modal-default-container">
         <button locations-modal-close class="contact__locations-modal--close-btn">
             <svg class="contact__locations-modal--close-icon">
-                <use href="./images/modal-icons.svg#products-close-button"></use>
+                <use href="./images/icons.svg#products-close-button"></use>
             </svg>
         </button>
         <h2 class="contact__locations-modal--heading">Our locations</h2>
@@ -205,17 +197,13 @@
     </div>
 </div>
 
-
 <!-- Contacts / Franchise Modal  -->
-
-<!-- franchise-modal-open  -->
-
 
 <div class="contact__franchise-modal--backdrop contact__franchise-modal--is-hidden" franchise-modal>
     <div class="modal-default-container">
         <button franchise-modal-close class="contact__locations-modal--close-btn">
             <svg class="contact__locations-modal--close-icon">
-                <use href="./images/modal-icons.svg#products-close-button"></use>
+                <use href="./images/icons.svg#products-close-button"></use>
             </svg>
         </button>
         <h2 class="contact__locations-modal--heading">Eager to work with us?</h2>
@@ -228,38 +216,32 @@
                 start-up fee - USD 50.00</li>
             <li>annual licensing fee - USD 15.00</li>
         </ul>
-
-
         <form class="contact__franchise-form">
             <h3 class="contact__locations-modal--sub-heading">Let's get in touch:</h3>
             <ul class="contact__franchise-form-field-list">
-
-
                 <li class="contact__franchise-form-field">
                     <label for="name">Name</label>
                     <div class="contact__franchise-field-container">
                         <svg class="contact__franchise-field-icon">
-                            <use href="./images/modal-icons.svg#form-name"></use>
+                            <use href="./images/icons.svg#form-name"></use>
                         </svg>
                         <input type="text" name="name" id="contact__franchise-form-name" />
                     </div>
                 </li>
-
                 <li class="contact__franchise-form-field">
                     <label for="tel">Phone</label>
                     <div class="contact__franchise-field-container">
                         <svg class="contact__franchise-field-icon">
-                            <use href="./images/modal-icons.svg#form-phone"></use>
+                            <use href="./images/icons.svg#form-phone"></use>
                         </svg>
                         <input type="tel" name="tel" id="contact__franchise-form-tel" />
                     </div>
                 </li>
-
                 <li class="contact__franchise-form-field">
                     <label for="mail">Email</label>
                     <div class="contact__franchise-field-container">
                         <svg class="contact__franchise-field-icon">
-                            <use href="./images/modal-icons.svg#form-email"></use>
+                            <use href="./images/icons.svg#form-email"></use>
                         </svg>
                         <input type="email" name="mail" id="contact__franchise-form-mail" />
                     </div>
@@ -270,18 +252,12 @@
                         placeholder="Leave your comment here"></textarea>
                 </li>
             </ul>
-
-
-            <!-- <button type="submit" class="button">Send</button> -->
-
             <button type="submit" class="contact__franchise-submit-button">
                 Send
                 <svg class="contacts__icon" width="8" height="10">
                     <use href="./images/icons.svg#icon-header-arrow-btn"></use>
                 </svg>
             </button>
-
         </form>
-
     </div>
 </div>
