--- a/src/sass/modals/_modals.scss
+++ b/src/sass/modals/_modals.scss
@@ -53,11 +53,15 @@
 
 .mob-menu__modal--listing-products {
   display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
   flex-basis: 85%;
   flex-wrap: wrap;
   margin-top: 5px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 10px;
 }
 
 .mob-menu__modal-card {
@@ -65,8 +69,6 @@
   display: inline-block;
   width: 40%;
   background-color: rgba(255, 255, 255, 0.1);
-  margin-left: 10px;
-  margin-bottom: 10px;
   border: dotted 1px #eaa6b6;
   padding: 5px;
   & > img {
@@ -148,12 +150,6 @@
 }
 
 // About / Read More Modal
-
-// .about__button-text {
-//   font-size: 16px;
-//   font-weight: 700;
-//   color: $accent-color;
-// }
 
 .about__readmore-modal {
   display: block;
