--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
       </svg>
     </button>
 
-    <button class="header__tb-btn button button--with-hover" type="button">
+    <button data-model-open class="header__tb-btn button button--with-hover" type="button">
       <span class="header__tb-text">Buy now</span>
       <svg class="header__tb-icon" width="15" height="20">
         <use href="./images/icons.svg#icon-arrow-common"></use>
@@ -35,19 +35,19 @@
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a class="link header__nav-link" href="">Home</a>
+              <a class="link header__nav-link" href="#hero">Home</a>
             </li>
             <li class="header__nav-item">
-              <a class="header__nav-link link" href="">About us</a>
+              <a class="header__nav-link link" href="#about-us">About us</a>
             </li>
             <li class="header__nav-item">
-              <a class="header__nav-link link" href="">How it's made?</a>
+              <a class="header__nav-link link" href="#about">How it's made?</a>
             </li>
             <li class="header__nav-item">
-              <a class="header__nav-link link" href="">Our products</a>
+              <a class="header__nav-link link" href="#products">Our products</a>
             </li>
             <li class="header__nav-item">
-              <a class="header__nav-link link" href="">Contacts</a>
+              <a class="header__nav-link link" href="#contacts">Contacts</a>
             </li>
           </ul>
         </nav>
