Customer reviews - about-us

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="section reviews section--no-padding">
+<section class="section reviews section--no-padding" id="about-us">
   <div class="container">
     <h2 hidden>Reviews</h2>
     <article class="article">
