--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header__container container">
-    <a class="header__logo-link">
+    <a class="header__logo-link" href="#hero">
       <img src="./images/hero-header/logo.svg" alt="logo" class="header__logo" width="199" height="50" />
     </a>
 
