--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -1,20 +1,17 @@
 <!-- Header / Buy Now Modal -->
 
-<div class="mob-menu__modal--backdrop mob-menu__modal--is-hidden" data-modal>
+<div class="modal-default-backdrop mob-menu-modal__is-hidden" data-modal>
     <div class="modal-default-container">
-        <button data-modal-close class="mob-menu__modal--close-btn">
-            <svg class="contact__locations-modal--close-icon">
+        <button data-modal-close class="modal-default-close-button">
+            <svg class="modal-default-close-icon">
                 <use href="./images/icons.svg#products-close-button"></use>
             </svg>
         </button>
-        <h2 class="mob-menu__modal--heading">Choose what you like</h2>
-        <ul class="mob-menu__modal--listing-products">
-            <li class="mob-menu__modal-card">
+        <h2 class="mob-menu-modal__heading">Choose what you like</h2>
+        <ul class="mob-menu-modal__products-list">
+            <li class="mob-menu-modal__product-card">
                 <h3>Ice Coffee</h3>
                 <img src="./images/gallery/tablet/gall-nine-koffee-tab-x1.png" alt="">
-                <svg class="mob-menu__modal-card-icon">
-                    <use href="./images/icons.svg#modal-like"></use>
-                </svg>
                 <div class="mob-menu__modal--stepper">
                     <span class="stepper">
                         <button class="minus-button">–</button>
@@ -23,12 +20,10 @@
                     </span>
                 </div>
             </li>
-            <li class="mob-menu__modal-card">
+            <li class="mob-menu-modal__product-card">
                 <h3>Icecream1</h3>
                 <img src="./images/gallery/tablet/gall-seven-icehand-tab-x1.png" alt="">
-                <svg class="mob-menu__modal-card-icon">
-                    <use href="./images/icons.svg#modal-like"></use>
-                </svg>
+
                 <div class="mob-menu__modal--stepper">
                     <span class="stepper">
                         <button class="minus-button">–</button>
@@ -37,12 +32,9 @@
                     </span>
                 </div>
             </li>
-            <li class="mob-menu__modal-card">
+            <li class="mob-menu-modal__product-card">
                 <h3>Icecream2</h3>
                 <img src="./images/gallery/tablet/gall-three-icelolly-tab-x1.png" alt="">
-                <svg class="mob-menu__modal-card-icon">
-                    <use href="./images/icons.svg#modal-like"></use>
-                </svg>
                 <div class="mob-menu__modal--stepper">
                     <span class="stepper">
                         <button class="minus-button">–</button>
@@ -51,12 +43,9 @@
                     </span>
                 </div>
             </li>
-            <li class="mob-menu__modal-card">
+            <li class="mob-menu-modal__product-card">
                 <h3>Icecream3</h3>
                 <img src="./images/gallery/tablet/gall-two-ice-tab-x1.png" alt="">
-                <svg class="mob-menu__modal-card-icon">
-                    <use href="./images/icons.svg#modal-like"></use>
-                </svg>
                 <div class="mob-menu__modal--stepper">
                     <span class="stepper">
                         <button class="minus-button">–</button>
@@ -66,10 +55,10 @@
                 </div>
             </li>
         </ul>
-        <button type="submit" class="contact__franchise-submit-button">
+        <button type="submit" class="modal-default-submit-button">
             Proceed
-            <svg class="contacts__icon" width="8" height="10">
-                <use href="./images/icons.svg#icon-header-arrow-btn"></use>
+            <svg width="15" height="20">
+                <use href="./images/icons.svg#icon-arrow-common"></use>
             </svg>
         </button>
     </div>
@@ -77,15 +66,15 @@
 
 <!-- About / Read More Modal  -->
 
-<div class="about__readmore-modal--backdrop about__readmore-modal--is-hidden" about-modal>
-    <div class="modal-default-container about__readmore-modal">
-        <button about-modal-close class="about__readmore-modal--close-btn">
-            <svg class="contact__locations-modal--close-icon">
+<div class="modal-default-backdrop about-modal__is-hidden" about-modal>
+    <div class="modal-default-container about-modal">
+        <button about-modal-close class="modal-default-close-button">
+            <svg class="modal-default-close-icon">
                 <use href="./images/icons.svg#products-close-button"></use>
             </svg>
         </button>
-        <h2 class="about__readmore-modal--heading"></h2>
-        <div class="about__readmore-text">
+        <h2 class="about-modal__readmore-heading"></h2>
+        <div class="about-modal__readmore-text">
             <h3>Pasteurisation</h3>
             <p>This technique heats milk to 72°C for no less than 15 seconds, then cooled immediately to destroy any
                 harmful bacteria
@@ -158,40 +147,43 @@
 
 <!-- Contacts / Locations Modal  -->
 
-<div class="contact__locations-modal--backdrop contact__locations-modal--is-hidden" locations-modal>
+<div class="modal-default-backdrop locations-modal__is-hidden" locations-modal>
     <div class="modal-default-container">
-        <button locations-modal-close class="contact__locations-modal--close-btn">
-            <svg class="contact__locations-modal--close-icon">
+        <button locations-modal-close class="modal-default-close-button">
+            <svg class="modal-default-close-icon">
                 <use href="./images/icons.svg#products-close-button"></use>
             </svg>
         </button>
-        <h2 class="contact__locations-modal--heading">Our locations</h2>
-        <ul class="contact_locations__card-list">
-            <li class="contact_locations-card">
-                <h3 class="contact__locations-modal--sub-heading">New York</h3>
-                <h4 class="contact__locations-modal--sub-heading2">Manhattan Mall</h4>
-                <span class="contact__locations-modal--address">100 W 33rd St, New York, NY 10001, US</span>
-                <a class="contact__locations-modal--text" href="https://goo.gl/maps/FP3681EWaUSJPdXm6">how to find</a>
-            </li class="contact_locations-card">
-            <li class="contact_locations-card">
-                <h3 class="contact__locations-modal--sub-heading">London</h3>
-                <h4 class="contact__locations-modal--sub-heading2">Covent Garden</h4>
-                <span class="contact__locations-modal--address">14 James St, London WC2E 8BU, UK</span>
-                <a class="contact__locations-modal--text" href="https://g.page/covent-garden-london?share">how to
+        <h2 class="locations-modal__heading">Our locations</h2>
+        <ul class="locations-modal__address-list">
+            <li class="locations-modal__address-card">
+                <h3 class="locations-modal__sub-heading">New York</h3>
+                <h4 class="locations-modal__sale-place">Manhattan Mall</h4>
+                <span class="locations-modal__sale-address">100 W 33rd St, New York, NY 10001, US</span>
+                <a class="locations-modal__sale-address-link" href="https://goo.gl/maps/FP3681EWaUSJPdXm6">how to
                     find</a>
             </li>
-            <li class="contact_locations-card">
-                <h3 class="contact__locations-modal--sub-heading">Berlin</h3>
-                <h4 class="contact__locations-modal--sub-heading2">Mercedes Platz</h4>
-                <span class="contact__locations-modal--address">Mühlenstraße 5, 10243 Berlin, Germany</span>
-                <a class="contact__locations-modal--text" href="https://goo.gl/maps/5JnRTD1Htr5awVuFA" type="_blank">how
+            <li class="locations-modal__address-card">
+                <h3 class="locations-modal__sub-heading">London</h3>
+                <h4 class="locations-modal__sale-place">Covent Garden</h4>
+                <span class="locations-modal__sale-address">14 James St, London WC2E 8BU, UK</span>
+                <a class="locations-modal__sale-address-link" href="https://g.page/covent-garden-london?share">how to
+                    find</a>
+            </li>
+            <li class="locations-modal__address-card">
+                <h3 class="locations-modal__sub-heading">Berlin</h3>
+                <h4 class="locations-modal__sale-place">Mercedes Platz</h4>
+                <span class="locations-modal__sale-address">Mühlenstraße 5, 10243 Berlin, Germany</span>
+                <a class="locations-modal__sale-address-link" href="https://goo.gl/maps/5JnRTD1Htr5awVuFA"
+                    type="_blank">how
                     to find</a>
             </li>
-            <li class="contact_locations-card">
-                <h3 class="contact__locations-modal--sub-heading">Paris</h3>
-                <h4 class="contact__locations-modal--sub-heading2">Galerie Vivienne</h4>
-                <span class="contact__locations-modal--address">5 Rue de la Banque, 75002 Paris, France</span>
-                <a class="contact__locations-modal--text" href="https://goo.gl/maps/GhdxaN1eFPjk9Q5ZA">how to find</a>
+            <li class="locations-modal__address-card">
+                <h3 class="locations-modal__sub-heading">Paris</h3>
+                <h4 class="locations-modal__sale-place">Galerie Vivienne</h4>
+                <span class="locations-modal__sale-address">5 Rue de la Banque, 75002 Paris, France</span>
+                <a class="locations-modal__sale-address-link" href="https://goo.gl/maps/GhdxaN1eFPjk9Q5ZA">how to
+                    find</a>
             </li>
         </ul>
     </div>
@@ -199,63 +191,63 @@
 
 <!-- Contacts / Franchise Modal  -->
 
-<div class="contact__franchise-modal--backdrop contact__franchise-modal--is-hidden" franchise-modal>
+<div class="modal-default-backdrop franchise-modal__is-hidden" franchise-modal>
     <div class="modal-default-container">
-        <button franchise-modal-close class="contact__locations-modal--close-btn">
-            <svg class="contact__locations-modal--close-icon">
+        <button franchise-modal-close class="modal-default-close-button">
+            <svg class="modal-default-close-icon">
                 <use href="./images/icons.svg#products-close-button"></use>
             </svg>
         </button>
-        <h2 class="contact__locations-modal--heading">Eager to work with us?</h2>
-        <h3 class="contact__locations-modal--sub-heading">Obtain
+        <h2 class="franchise-modal__heading">Eager to work with us?</h2>
+        <h3 class="franchise-modal__sub-heading">Obtain
             access to our
             business
             knowledge, and trademark, just be becoming a part of us just for:</h3>
-        <ul class="contact__franchise-description">
+        <ul class="franchise-modal__fee-list">
             <li>initial
                 start-up fee - USD 50.00</li>
             <li>annual licensing fee - USD 15.00</li>
         </ul>
-        <form class="contact__franchise-form">
-            <h3 class="contact__locations-modal--sub-heading">Let's get in touch:</h3>
-            <ul class="contact__franchise-form-field-list">
-                <li class="contact__franchise-form-field">
+        <form class="franchise-modal__form">
+            <h4 class="franchise-modal__form-heading">Let's get in touch:</h4>
+            <ul class="franchise-modal__form-field-list">
+                <li class="franchise-modal__form-field">
                     <label for="name">Name</label>
-                    <div class="contact__franchise-field-container">
-                        <svg class="contact__franchise-field-icon">
+                    <div class="franchise-modal__field-container">
+                        <svg class="franchise-modal__field-icon">
                             <use href="./images/icons.svg#form-name"></use>
                         </svg>
-                        <input type="text" name="name" id="contact__franchise-form-name" />
+                        <input type="text" name="name" id="franchise-modal__form-name" />
                     </div>
                 </li>
-                <li class="contact__franchise-form-field">
+                <li class="franchise-modal__form-field">
                     <label for="tel">Phone</label>
-                    <div class="contact__franchise-field-container">
-                        <svg class="contact__franchise-field-icon">
+                    <div class="franchise-modal__field-container">
+                        <svg class="franchise-modal__field-icon">
                             <use href="./images/icons.svg#form-phone"></use>
                         </svg>
-                        <input type="tel" name="tel" id="contact__franchise-form-tel" />
+                        <input type="tel" name="tel" id="franchise-modal__form-tel" />
                     </div>
                 </li>
-                <li class="contact__franchise-form-field">
+                <li class="franchise-modal__form-field">
                     <label for="mail">Email</label>
-                    <div class="contact__franchise-field-container">
-                        <svg class="contact__franchise-field-icon">
+                    <div class="franchise-modal__field-container">
+                        <svg class="franchise-modal__field-icon">
                             <use href="./images/icons.svg#form-email"></use>
                         </svg>
-                        <input type="email" name="mail" id="contact__franchise-form-mail" />
+                        <input type="email" name="mail" id="franchise-modal__form-mail" />
                     </div>
                 </li>
-                <li class="contact__franchise-form-field">
+                <li class="franchise-modal__form-field">
                     <label for="comment">Comment</label>
-                    <textarea name="comment" id="comment" cols="5" rows="2" class="contact__franchise-form-textarea"
+                    <textarea name="comment" id="comment" cols="15" rows="2" class="franchise-modal__textarea"
                         placeholder="Leave your comment here"></textarea>
                 </li>
             </ul>
-            <button type="submit" class="contact__franchise-submit-button">
+            <button type="submit" class="modal-default-submit-button">
                 Send
-                <svg class="contacts__icon" width="8" height="10">
-                    <use href="./images/icons.svg#icon-header-arrow-btn"></use>
+                <svg width="15" height="20">
+                    <use href="./images/icons.svg#icon-arrow-common"></use>
                 </svg>
             </button>
         </form>
