--- a/src/sass/modals/_modals.scss
+++ b/src/sass/modals/_modals.scss
@@ -1,4 +1,5 @@
 // Font Mixin
+// 222
 
 @mixin modal-font-set($font-family: 'DM Sans', $font-weight: 500, $font-size: 14px, $line-height: 18px, $text-align: center, $letter-spacing: 0.03em, $color: $secondary-text-color) {
   font-family: $font-family;
