--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,6 @@
 <section class="section contacts" id="contacts">
   <div class="container">
-    <h2 class="contacts__title">contacts</h2>
+    <h2 class="contacts__title visually-hidden">contacts</h2>
     <!--контакты представительств-->
     <ul class="contacts__list">
       <li class="contacts__branch">
